--- a/index.html
+++ b/index.html
@@ -187,7 +187,9 @@
                                 <li>Crowd-free training in your home, in the great outdoors, or in the trainer's home gym</li>
                                 <li>Safe, effective workouts that include warm-up, workout, and stretching</li>
                                 <li>Assessments and feedback to gauge your progress</li>
-                                <li>Weekly workout plans for the days you are not with the trainer</li>
+                                <li>Workout plans for the days you are not with the trainer</li>
+				<li>Fitness-related education and handouts</li>
+				<li>Assistance with an individualized sustainable fat-loss plan</li>
                                 <li>Opportunity to earn rewards for ongoing effort</li>
                             </b>
 
@@ -207,7 +209,9 @@
                             <li>Crowd-free training in your home, in the great outdoors, or in the trainer's home gym</li>
                             <li>Safe, effective workouts that include warm-up, workout, and stretching</li>
                             <li>Assessments and feedback to gauge your progress</li>
-                            <li>Weekly workout plans for the days you are not with the trainer</li>
+                            <li>Workout plans for the days you are not with the trainer</li>
+			    <li>Fitness-related education and handouts</li>
+			    <li>Assistance with an individualized sustainable fat-loss plan</li>
                             <li>Opportunity to earn rewards for ongoing effort</li>
 
                             </b>
@@ -218,15 +222,25 @@
                     <div class="tab-pane" id="policy">
                         <div class="visa-info">
                             <h1>Classes</h1>
+				<h2>Finding Freedom<h2>
                             <b>
-                            <p>TogetherWON is developing classes that are
-                                centered around stages in a women's life. In these classes you will learn about the
-                                physical implications of your stage as you participate in workouts and receive exercises
-                                to do at home.
-                                Please check back with TogetherWON for more
-                                information on the classes as they develop.
-                            </p>
+                            <p>Would you like to be active again but don't know where to start?  "Finding Freedom" is an 8 week class
+				    where you can safely transition back into an active lifestyle while you learn valuable components
+				    of living a healthy lifestyle. This class includes 16 sessions which include an educational
+				    portion followed by a workout and stretching.  You will also receive another workout to complete
+				    on your own if you choose.  The topics that will be addressed during this class include the following:
+				    <li>Sustainable fat loss</li>
+				    <li>Pelvic floor restoration (freedom from accidental leakage, pelvic and lower back pain)
+				    <li>Proper posture and movement</li>
+				    <li>Core strengthening</li>
+				    <li>Overall strength building for everyday movement</li>
+				</p>
                             </b>
+			     <p>
+				     This class is limited to 4 participants.  Contact TogetherWON now to sign up for the current session!
+				     <li>Next class starts January 17, 2017</li>
+				      <li>Meets Tuesdays/Fridays from 8:00-9:00 AM</li>
+				     <li><b>Limited time special price = $288</b> (usually $320)</li>
                             </p>
 
                         </div>
@@ -249,7 +263,7 @@
                         home gym in North Colorado Springs. Currently "In-Client-Home" training is only available
                         for residents in Briargate, Northgate and Monument.</p>
                     <p>Each session is 1 hour</p>
-                    <p>Payment is due at the beginning of every 4-week period. Only two reschedules allowed each month and
+                    <p>Payment is due at the beginning of every 4-week period. Only one reschedule allowed each month and
                     based on availability</p>
                 </div>
             </div>
@@ -260,7 +274,7 @@
                             <h1>Once a week training</h1>
                             <h2>(4 Sessions)</h2>
                             <h2>$220</h2>
-                            <p>4 weeks of 1 day/week training & individualized weekly fitness plans</p>
+                            <p>4 weeks of 1 day/week training & take-home fitness plans</p>
 
 
                         </div>
@@ -270,7 +284,7 @@
                             <h1>Twice a week training</h1>
                             <h2>(8 Sessions)</h2>
                             <h2>$400</h2>
-                            <p>4 weeks of 2 days/week training & individualized weekly fitness plans </p>
+                            <p>4 weeks of 2 days/week training & take-home fitness plans </p>
 
                         </div>
                     </div>
@@ -279,7 +293,7 @@
                             <h1>3 times a week training</h1>
                             <h2>(12 Sessions)</h2>
                             <h2>$540</h2>
-                            <p>4 weeks of 3 days/week training & individualized weekly fitness plans</p>
+                            <p>4 weeks of 3 days/week training & take-home fitness plans</p>
 
                         </div>
                     </div>
@@ -290,7 +304,7 @@
                             <h1>Once a week Buddy Training</h1>
                             <h2>(4 Sessions)</h2>
                             <h2>$128/person</h2>
-                            <p>4 weeks of 1 day/week training with a friend & weekly fitness plans</p>
+                            <p>4 weeks of 1 day/week training with a friend & take-home fitness plans</p>
 
                         </div>
                     </div>
@@ -299,7 +313,7 @@
                             <h1>Twice a week Buddy Training</h1>
                             <h2>(8 Sessions)</h2>
                             <h2>$240/person</h2>
-                            <p>4 weeks of 2 days/week training with a friend & weekly fitness plans</p>
+                            <p>4 weeks of 2 days/week training with a friend & take-home fitness plans</p>
 
                         </div>
                     </div>
@@ -308,7 +322,7 @@
                             <h1>3 times a week Buddy Training</h1>
                             <h2>(12 Sessions)</h2>
                             <h2>$336/person</h2>
-                            <p>4 weeks of 3 days/week training with a friend & weekly fitness plans</p>
+                            <p>4 weeks of 3 days/week training with a friend & take-home fitness plans</p>
 
                         </div>
                     </div>
