--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     <div class="tab-pane" id="policy">
                         <div class="visa-info">
                             <h1>Classes</h1>
-				<h2>Finding Freedom</h2>
+				<h2><b>FINDING FREEDOM</b></h2>
                             <b>
                             <p>Would you like to be active again but don't know where to start?  "Finding Freedom" is an 8 week class
 				    where you can safely transition back into an active lifestyle while you learn valuable components
