--- a/index.html
+++ b/index.html
@@ -223,13 +223,14 @@
                         <div class="visa-info">
                             <h1>Classes</h1>
 				<h2><b>FINDING FREEDOM</b></h2>
+				<h2><b>$320</b></h2>
                             <b>
                             <p>Would you like to be active again but don't know where to start?  "Finding Freedom" is an 8 week class
 				    where you can safely transition back into an active lifestyle while you learn valuable components
-				    of living a healthy lifestyle. This class includes 16 sessions which include an educational
-				    portion followed by a workout and stretching.  You will also receive another workout to complete
+				    of healthy living. This class includes 16 sessions which include an educational
+				    portion, followed by a workout and stretching.  You will also receive another workout to complete
 				    on your own if you choose.  The topics that will be addressed during this class include the following:
-				    <li>Sustainable fat loss</li>
+				    <li>Fat loss for women</li>
 				    <li>Pelvic floor restoration (freedom from accidental leakage, pelvic and lower back pain)
 				    <li>Proper posture and movement</li>
 				    <li>Core strengthening</li>
@@ -238,9 +239,12 @@
                             </b>
 			     <p><b>
 				     This class is limited to 4 participants.  Contact TogetherWON now to sign up for the current session!
-				     <li>Next class starts January 17, 2017</li>
-				      <li>Meets Tuesdays/Fridays from 8:00-9:00 AM</li>
-				     <li>$320</li>
+				     <br>
+				     2 class options currently available:
+				   
+				      <li>Tuesdays/Fridays from 8:00-9:00 AM starting January 17th</li>
+				     <li>Monday/Thursday from 9:30-10:30 AM starting January 23rd</li>
+				    
 				     </b>
                             </p>
 
