--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
 				     <br>
 				     2 class options currently available:
 				   
-				      <li>Tuesdays/Fridays from 8:00-9:00 AM starting January 17th</li>
-				     <li>Monday/Thursday from 9:30-10:30 AM starting January 23rd</li>
+				      <li>Tuesday/Friday 8:00-9:00 AM starting January 17th</li>
+				     <li>Monday/Thursday 9:30-10:30 AM starting January 23rd</li>
 				    
 				     </b>
                             </p>
