--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                 <div class="row">
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
-                            <h1>Once a week training</h1>
+                            <h1>Once a week individual training</h1>
                             <h2>(4 Sessions)</h2>
                             <h2>$220</h2>
                             <p>4 weeks of 1 day/week training & take-home fitness plans</p>
@@ -286,7 +286,7 @@
                     </div>
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
-                            <h1>Twice a week training</h1>
+                            <h1>Twice a week individual training</h1>
                             <h2>(8 Sessions)</h2>
                             <h2>$400</h2>
                             <p>4 weeks of 2 days/week training & take-home fitness plans </p>
@@ -295,7 +295,7 @@
                     </div>
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
-                            <h1>3 times a week training</h1>
+                            <h1>3 times a week individual training</h1>
                             <h2>(12 Sessions)</h2>
                             <h2>$540</h2>
                             <p>4 weeks of 3 days/week training & take-home fitness plans</p>
@@ -347,7 +347,7 @@
                     </div>
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
-                            <h1>Three times a week Group Training</h1>
+                            <h1>3 times a week Group Training</h1>
                             <h2>(12 Sessions)</h2>
                             <h2>$180/person</h2>
                             <p>4 weeks of 3 days/week training with a friend & take-home workout</p>
