--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                                 <li>A female certified trainer that listens and seeks to understand</li>
                                 <li>Individualized workouts based on assessments that identify muscle imbalances</li>
                                 <li>Zone training using heart rate to maximize caloric burn</li>
-                                <li>Crowd-free training in your home, in the great outdoors, or in the trainer's home gym</li>
+                                <li>Crowd-free training in your home, in the great outdoors, or in the trainer's home studio</li>
                                 <li>Safe, effective workouts that include warm-up, workout, and stretching</li>
                                 <li>Assessments and feedback to gauge your progress</li>
                                 <li>Workout plans for the days you are not with the trainer</li>
@@ -206,7 +206,7 @@
                             <li>A female certified trainer who listens and seeks to understand</li>
                             <li>Partner-centered personalized workouts that are challenging and fun</li>
                             <li>Zone training using heart rate to maximize caloric burn</li>
-                            <li>Crowd-free training in your home, in the great outdoors, or in the trainer's home gym</li>
+                            <li>Crowd-free training in your home, in the great outdoors, or in the trainer's home studio</li>
                             <li>Safe, effective workouts that include warm-up, workout, and stretching</li>
                             <li>Assessments and feedback to gauge your progress</li>
                             <li>Workout plans for the days you are not with the trainer</li>
@@ -221,23 +221,26 @@
                     </div>
                     <div class="tab-pane" id="policy">
                         <div class="visa-info">
-                            <h1>Classes</h1>
-				<h2><b>FINDING FREEDOM</b></h2>
-				<h2><b>$320</b></h2>
-                            <b>
-                            <p>Would you like to be active again but don't know where to start?  "Finding Freedom" is an 8 week class
-				    where you can safely transition back into an active lifestyle while you learn valuable components
-				    of healthy living. This class includes 16 sessions which include an educational
-				    portion, followed by a workout and stretching.  You will also receive another workout to complete
-				    on your own if you choose.  The topics that will be addressed during this class include the following:
-				    <li>Fat loss for women</li>
-				    <li>Pelvic floor restoration (freedom from accidental leakage, pelvic and lower back pain)
-				    <li>Proper posture and movement</li>
-				    <li>Core strengthening</li>
-				    <li>Overall strength building for everyday movement</li>
-				</p>
+                            <h1>Small Group Training</h1>
+				<h2><b>3-4 Women</b></h2>
+				
+                             <p><b>What to expect:
+
+                            <li>1 Hour sessions with 2-3 other women that have similar training goals</li>
+                            <li>A female certified trainer who listens and seeks to understand</li>
+                            <li>Personalized group workouts that are challenging and fun</li>
+                            <li>Zone training using heart rate to maximize caloric burn</li>
+                            <li>Crowd-free training in your home, in the great outdoors, or in the trainer's home studio</li>
+                            <li>Safe, effective workouts that include warm-up, workout, and stretching</li>
+                            <li>Assessments and feedback to gauge your progress</li>
+                            <li>One additional workout to complete on your own each week</li>
+			    <li>Fitness-related education and handouts</li>
+			    <li>Sustainable fat-loss plan</li>
+                            <li>Opportunity to earn rewards for ongoing effort</li>
+
                             </b>
-			     
+                            </p>
+
 
                         </div>
                     </div>
@@ -332,7 +335,7 @@
                             <h1>Twice a week Group Training</h1>
                             <h2>(8 Sessions)</h2>
                             <h2>$144/person</h2>
-                            <p>4 weeks of 2 days/week training with a friend & take-home workout</p>
+                            <p>4 weeks of 2 days/week training with 2-3 others & take-home workout</p>
 
                         </div>
                     </div>
@@ -341,7 +344,7 @@
                             <h1>3 times a week Group Training</h1>
                             <h2>(12 Sessions)</h2>
                             <h2>$180/person</h2>
-                            <p>4 weeks of 3 days/week training with a friend & take-home workout</p>
+                            <p>4 weeks of 3 days/week training with 2-3 others & take-home workout</p>
 
                         </div>
 
