--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         Training</a></li>
                     <li><a href="#terms" role="tab" data-toggle="tab"><i class="fa fa-user-plus"></i>Buddy Training</a>
                     </li>
-                    <li><a href="#policy" role="tab" data-toggle="tab"><i class="fa fa-users"></i>Classes</a></li>
+                    <li><a href="#policy" role="tab" data-toggle="tab"><i class="fa fa-users"></i>Small Group Training</a></li>
                 </ul>
             </div>
             <div class="col-sm-9 col-md-10">
