--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
                             <h1>Twice a week Group Training</h1>
-                            <h2>(8 Sessions with 3-4 women)</h2>
+                            <h2>(8 Sessions, 3-4 women)</h2>
                             <h2>$160/person</h2>
                             <p>4 weeks of 2 days/week training with 2-3 others & take-home workout</p>
 
@@ -342,7 +342,7 @@
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
                             <h1>3 times a week Group Training</h1>
-                            <h2>(12 Sessions with 3-4 women)</h2>
+                            <h2>(12 Sessions, 3-4 women)</h2>
                             <h2>$216/person</h2>
                             <p>4 weeks of 3 days/week training with 2-3 others & take-home workout</p>
 
