--- a/index.html
+++ b/index.html
@@ -221,8 +221,7 @@
                     </div>
                     <div class="tab-pane" id="policy">
                         <div class="visa-info">
-                            <h1>Small Group Training</h1>
-				<h2><b>3-4 Women</b></h2>
+                            <h1>Small Group Training (3-4 women)</h1>
 				
                              <p><b>What to expect:
 
