--- a/index.html
+++ b/index.html
@@ -221,7 +221,8 @@
                     </div>
                     <div class="tab-pane" id="policy">
                         <div class="visa-info">
-                            <h1>Small Group Training (3-4 women)</h1>
+                            <h1>Small Group Training</h1>
+				<h1>3-4 Women</h1>
 				
                              <p><b>What to expect:
 
