--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
                     <div class="tab-pane" id="policy">
                         <div class="visa-info">
                             <h1>Small Group Training</h1>
-				<h2>3-4 Women</h2>
-				
+				<h2><b>3-4 Women</b></h2>
+				<br>
                              <p><b>What to expect:
 
                             <li>1 Hour sessions with 2-3 other women that have similar training goals</li>
