--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
             as we zero in on your body's unique chemistry
             and how it can become as healthy and efficient as possible. <b>Weight loss</b> your goal? You will have
             workouts that effectively increase caloric burn through
-            heartrate driven zone-training. <b>Pregnant or post-partum?</b> Workouts will be safe and effective for
+            heartrate driven zone-training. You will also learn how to eat according to your 
+		    individual metabolic framework so that you can burn fat efficiently and keep it off!
+		    <b>Pregnant or post-partum?</b> Workouts will be safe and effective for
             you and baby.
             <b>Over 55?</b> Workouts will account for the changes that occur in females with age.
             <b>Young athlete? </b>Workouts will focus on getting you to the next level.
