--- a/index.html
+++ b/index.html
@@ -101,9 +101,7 @@
 
                     <h1 id="win-title">We Are <span>Women</span> <br>who <span>Win</span></h1>
 
-                    <h2><b>Ready to achieve your fitness goals
-                    and live life to the fullest? Learn how in-home personal training that begins with core strengthening
-                    can get you there!
+                    <h2><b>Helping women gain freedom through core-centered personal training
                     </b></h2>
                     <a href="#about" class="btn btn-primary">Learn More</a>
 
