--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
                     <h1 id="win-title">We Are <span>Women</span> <br>who <span>Win</span></h1>
 
-                    <h2><b>Helping women gain freedom through core-centered personal training
+                    <h2><b>Helping women win freedom through core-powered personal training
                     </b></h2>
                     <a href="#about" class="btn btn-primary">Learn More</a>
 
