--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <div class="container">
         <div class="padding">
 
-            <h1 class="text-center">Core?</h1>
+            <h1 class="text-center">Core-Power</h1>
             <p>Core training is <b>not</b> simply about flattening your stomach, or trying to get a "6-pack".
             The core contains deep muscles that are
             central to strength, balance and control for the entire body.  As women transition through different stages
