--- a/index.html
+++ b/index.html
@@ -414,9 +414,9 @@
                         <h2>ACE Certified Personal Trainer <br> Core Training Specialist</h2>
                         <p>Kristen is a Colorado native who grew up climbing 14,000ft. mountains. She
                             also developed a passion for running and swimming, both of which she competed Division I in
-                            college. After college Kristen had the privelege of becoming a mother to 4 amazing children.
+                            college. After college Kristen had the privilege of becoming a mother to 4 amazing children.
                             It was after her pregnancies that Kristen experienced firsthand how core dysfunction
-                            can affect anyone; college athelete or not. Desiring to restore her core so that
+                            can affect anyone; college athlete or not. Desiring to restore her core so that
                             she could remain active, Kristen sought out advice but found it difficult to
                             receive specific and practical help. After becoming an ACE certified personal trainer Kristen
                             specialized in core training in hope to bring others the answers to
