--- a/index.html
+++ b/index.html
@@ -266,82 +266,65 @@
                     based on availability</p>
                 </div>
             </div>
-            <div class="plans">
+	 <div class="plans">
                 <div class="row">
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
-                            <h1>Once a week Individual training</h1>
-                            <h2>(4 Sessions)</h2>
-                            <h2>$220</h2>
-                            <p>4 weeks of 1 day/week training & take-home fitness plans</p>
-
-
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-12 col-xs-12">
-                        <div class="plan">
-                            <h1>Twice a week Individual training</h1>
+                            <h1>Individual Training</h1>
+                            <h2>Twice a week</h2>
                             <h2>(8 Sessions)</h2>
                             <h2>$400</h2>
-                            <p>4 weeks of 2 days/week training & take-home fitness plans </p>
+                            <p>4 weeks of 2 days/week training & take-home fitness plans</p>
+
 
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
-                            <h1>3 times a week Individual training</h1>
-                            <h2>(12 Sessions)</h2>
-                            <h2>$540</h2>
-                            <p>4 weeks of 3 days/week training & take-home fitness plans</p>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-4 col-sm-12 col-xs-12">
-                        <div class="plan">
-                            <h1>Once a week Buddy Training</h1>
-                            <h2>(4 Sessions)</h2>
-                            <h2>$128/person</h2>
-                            <p>4 weeks of 1 day/week training with a friend & take-home fitness plans</p>
-
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-12 col-xs-12">
-                        <div class="plan">
-                            <h1>Twice a week Buddy Training</h1>
+                            <h1>Buddy Training</h1>
+                            <h2>Twice a week</h2>
                             <h2>(8 Sessions)</h2>
                             <h2>$240/person</h2>
-                            <p>4 weeks of 2 days/week training with a friend & take-home fitness plans</p>
+                            <p>4 weeks of 2 days/week training with a friend & take-home fitness plans </p>
 
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
-                            <h1>3 times a week Buddy Training</h1>
-                            <h2>(12 Sessions)</h2>
-                            <h2>$336/person</h2>
-                            <p>4 weeks of 3 days/week training with a friend & take-home fitness plans</p>
-
-                        </div>
-
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-4 col-sm-12 col-xs-12">
-                    </div>
-                    <div class="col-md-4 col-sm-12 col-xs-12">
-                        <div class="plan">
-                            <h1>Twice a week Group Training</h1>
+                            <h1>Group Training</h1>
+                            <h2>Twice a week</h2>
                             <h2>(8 Sessions, 3-4 women)</h2>
                             <h2>$160/person</h2>
                             <p>4 weeks of 2 days/week training with 2-3 others & take-home workout</p>
 
                         </div>
                     </div>
+                </div>
+                <div class="row">
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="plan">
-                            <h1>3 times a week Group Training</h1>
+                            <h1>Individual Training</h1>
+                            <h2>3 times a week</h2>
+                            <h2>(12 Sessions)</h2>
+                            <h2>$540</h2>
+                            <p>4 weeks of 3 days/week training & take-home fitness plan</p>
+
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-12 col-xs-12">
+                        <div class="plan">
+                            <h1>Buddy Training</h1>
+                            <h2>3 times a week</h2>
+                            <h2>(12 Sessions)</h2>
+                            <h2>$336/person</h2>
+                            <p>4 weeks of 3 days/week training with a friend & take-home fitness plans</p>
+
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-12 col-xs-12">
+                        <div class="plan">
+                            <h1>Group Training</h1>
+                            <h2>3 times a week</h2>
                             <h2>(12 Sessions, 3-4 women)</h2>
                             <h2>$216/person</h2>
                             <p>4 weeks of 3 days/week training with 2-3 others & take-home workout</p>
@@ -349,7 +332,8 @@
                         </div>
 
                     </div>
-                </div>
+		 </div>
+                                    
             </div>
         </div>
     </div>
